// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Authenticator Utility Tests getAuthenticatorEnrollButtonElements Tests should detect authenticator options for additional enroll 1`] = `
Array [
  Object {
    "dir": undefined,
    "id": "auth_btn_okta_password_1234abc",
    "label": "Password",
    "noTranslate": false,
    "options": Object {
      "actionParams": Object {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": "1234abc",
        "authenticator.methodType": undefined,
      },
      "ariaLabel": "oie.select.authenticator.enroll.password.label",
      "authenticator": Object {
        "displayName": "Okta Password",
        "id": "",
        "key": "okta_password",
        "methods": Array [
          Object {
            "type": "password",
          },
        ],
        "type": "password",
      },
      "ctaLabel": "oie.enroll.authenticator.button.text",
      "dataSe": "okta_password",
      "description": "oie.password.authenticator.description",
      "iconName": "okta_password_0",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": false,
      "isEnroll": true,
      "key": "okta_password",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
  Object {
    "dir": undefined,
    "id": "auth_btn_okta_email_1235abc",
    "label": "Email",
    "noTranslate": false,
    "options": Object {
      "actionParams": Object {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": "1235abc",
        "authenticator.methodType": undefined,
      },
      "ariaLabel": "oie.select.authenticator.enroll.email.label",
      "authenticator": Object {
        "displayName": "Okta Email",
        "id": "",
        "key": "okta_email",
        "methods": Array [
          Object {
            "type": "email",
          },
        ],
        "type": "email",
      },
      "ctaLabel": "enroll.choices.setup.another",
      "dataSe": "okta_email",
      "description": "oie.email.authenticator.description",
      "iconName": "okta_email_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": true,
      "isEnroll": true,
      "key": "okta_email",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
]
`;

exports[`Select Authenticator Utility Tests getAuthenticatorEnrollButtonElements Tests should format on_prem authenticator option when display name exists 1`] = `
Array [
  Object {
    "dir": undefined,
    "id": "auth_btn_onprem_mfa_undefined",
    "label": "On Prem",
    "noTranslate": false,
    "options": Object {
      "actionParams": Object {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": undefined,
        "authenticator.methodType": "onprem_mfa",
      },
      "ariaLabel": "oie.select.authenticator.enroll.named.authenticator.label",
      "authenticator": Object {
        "displayName": "Some Company Name",
        "id": "",
        "key": "onprem_mfa",
        "methods": Array [
          Object {
            "type": "",
          },
        ],
        "type": "",
      },
      "ctaLabel": "oie.enroll.authenticator.button.text",
      "dataSe": "onprem_mfa-onprem_mfa",
      "description": "oie.on_prem.authenticator.description",
      "iconName": "onprem_mfa_0",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": false,
      "isEnroll": true,
      "key": "onprem_mfa",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
]
`;

exports[`Select Authenticator Utility Tests getAuthenticatorEnrollButtonElements Tests should return formatted Okta Verify method type options when raw options are provided 1`] = `
Array [
  Object {
    "id": "auth_btn_okta_verify_totp",
    "label": "oie.okta_verify.label",
    "options": Object {
      "actionParams": Object {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "totp",
      },
      "ariaLabel": "oie.select.authenticator.enroll.okta_verify.authenticator.label",
      "ctaLabel": "oie.enroll.authenticator.button.text",
      "dataSe": "okta_verify-totp",
      "description": "oie.okta_verify.authenticator.description",
      "iconDescr": "factor.totpSoft.description",
      "iconName": "oktaVerify_0",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": false,
      "isEnroll": true,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
  Object {
    "id": "auth_btn_okta_verify_push",
    "label": "oie.okta_verify.label",
    "options": Object {
      "actionParams": Object {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "push",
      },
      "ariaLabel": "oie.select.authenticator.enroll.okta_verify.authenticator.label",
      "ctaLabel": "oie.enroll.authenticator.button.text",
      "dataSe": "okta_verify-push",
      "description": "oie.okta_verify.authenticator.description",
      "iconDescr": "factor.push.description",
      "iconName": "oktaVerifyPush_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": false,
      "isEnroll": true,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
]
`;

exports[`Select Authenticator Utility Tests getAuthenticatorVerifyButtonElements Tests should not reorder OV option when fastpass is not an option 1`] = `
Array [
  Object {
    "id": "auth_btn_okta_verify_totp",
    "label": "oie.okta_verify.label",
    "options": Object {
      "actionParams": Object {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "totp",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.totp.label",
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-totp",
      "description": "Code",
      "iconDescr": "factor.totpSoft.description",
      "iconName": "oktaVerify_0",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
  Object {
    "id": "auth_btn_okta_verify_push",
    "label": "oie.okta_verify.label",
    "options": Object {
      "actionParams": Object {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "push",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.push.label",
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-push",
      "description": "Push",
      "iconDescr": "factor.push.description",
      "iconName": "oktaVerifyPush_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
  Object {
    "dir": "ltr",
    "id": "auth_btn_phone_number_undefined",
    "label": "phone_number",
    "noTranslate": true,
    "options": Object {
      "actionParams": Object {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": undefined,
        "authenticator.methodType": undefined,
      },
      "ariaLabel": "oie.select.authenticator.verify.phone.with.phone.label",
      "authenticator": Object {
        "displayName": "",
        "id": "",
        "key": "phone_number",
        "methods": Array [
          Object {
            "type": "",
          },
        ],
        "profile": Object {
          "phoneNumber": "216XXXXX43",
        },
        "type": "",
      },
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "phone_number",
      "description": "216XXXXX43",
      "iconName": "phone_number_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "phone_number",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
]
`;

exports[`Select Authenticator Utility Tests getAuthenticatorVerifyButtonElements Tests should not reorder OV option when method types are not set in IDX response 1`] = `
Array [
  Object {
    "dir": undefined,
    "id": "auth_btn_okta_verify_abc234",
    "label": "oie.okta_verify.label",
    "noTranslate": false,
    "options": Object {
      "actionParams": Object {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": "abc234",
        "authenticator.methodType": "signed_nonce",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.signed_nonce.label",
      "authenticator": Object {
        "displayName": "",
        "id": "",
        "key": "okta_verify",
        "methods": Array [
          Object {
            "type": "",
          },
        ],
        "type": "",
      },
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-signed_nonce",
      "description": "Okta Verify",
      "iconName": "okta_verify_0",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
  Object {
    "dir": "ltr",
    "id": "auth_btn_phone_number_undefined",
    "label": "phone_number",
    "noTranslate": true,
    "options": Object {
      "actionParams": Object {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": undefined,
        "authenticator.methodType": undefined,
      },
      "ariaLabel": "oie.select.authenticator.verify.phone.with.phone.label",
      "authenticator": Object {
        "displayName": "",
        "id": "",
        "key": "phone_number",
        "methods": Array [
          Object {
            "type": "",
          },
        ],
        "profile": Object {
          "phoneNumber": "216XXXXX43",
        },
        "type": "",
      },
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "phone_number",
      "description": "216XXXXX43",
      "iconName": "phone_number_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "phone_number",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
]
`;

exports[`Select Authenticator Utility Tests getAuthenticatorVerifyButtonElements Tests should return formatted Okta Verify method type options when raw options are provided 1`] = `
Array [
  Object {
    "id": "auth_btn_okta_verify_totp",
    "label": "oie.okta_verify.label",
    "options": Object {
      "actionParams": Object {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "totp",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.totp.label",
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-totp",
      "description": "Code",
      "iconDescr": "factor.totpSoft.description",
      "iconName": "oktaVerify_0",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
  Object {
    "id": "auth_btn_okta_verify_push",
    "label": "oie.okta_verify.label",
    "options": Object {
      "actionParams": Object {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "push",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.push.label",
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-push",
      "description": "Push",
      "iconDescr": "factor.push.description",
      "iconName": "oktaVerifyPush_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
]
`;

exports[`Select Authenticator Utility Tests getAuthenticatorVerifyButtonElements Tests should set fastpass at beginning of array when deviceKnown = true with multiple OV method types 1`] = `
Array [
  Object {
    "id": "auth_btn_okta_verify_signed_nonce",
    "label": "oie.okta_verify.label",
    "options": Object {
      "actionParams": Object {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "signed_nonce",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.signed_nonce.label",
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-signed_nonce",
      "description": "Fastpass",
      "iconDescr": "factor.push.description",
      "iconName": "oktaVerifyPush_2",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
  Object {
    "id": "auth_btn_okta_verify_totp",
    "label": "oie.okta_verify.label",
    "options": Object {
      "actionParams": Object {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "totp",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.totp.label",
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-totp",
      "description": "Code",
      "iconDescr": "factor.totpSoft.description",
      "iconName": "oktaVerify_0",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
  Object {
    "id": "auth_btn_okta_verify_push",
    "label": "oie.okta_verify.label",
    "options": Object {
      "actionParams": Object {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "push",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.push.label",
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-push",
      "description": "Push",
      "iconDescr": "factor.push.description",
      "iconName": "oktaVerifyPush_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
  Object {
    "dir": "ltr",
    "id": "auth_btn_phone_number_undefined",
    "label": "phone_number",
    "noTranslate": true,
    "options": Object {
      "actionParams": Object {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": undefined,
        "authenticator.methodType": undefined,
      },
      "ariaLabel": "oie.select.authenticator.verify.phone.with.phone.label",
      "authenticator": Object {
        "displayName": "",
        "id": "",
        "key": "phone_number",
        "methods": Array [
          Object {
            "type": "",
          },
        ],
        "profile": Object {
          "phoneNumber": "216XXXXX43",
        },
        "type": "",
      },
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "phone_number",
      "description": "216XXXXX43",
      "iconName": "phone_number_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "phone_number",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
]
`;

exports[`Select Authenticator Utility Tests getAuthenticatorVerifyButtonElements Tests should set fastpass at end of array when deviceKnown is not set with multiple OV method types 1`] = `
Array [
  Object {
    "id": "auth_btn_okta_verify_totp",
    "label": "oie.okta_verify.label",
    "options": Object {
      "actionParams": Object {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "totp",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.totp.label",
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-totp",
      "description": "Code",
      "iconDescr": "factor.totpSoft.description",
      "iconName": "oktaVerify_0",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
  Object {
    "id": "auth_btn_okta_verify_push",
    "label": "oie.okta_verify.label",
    "options": Object {
      "actionParams": Object {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "push",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.push.label",
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-push",
      "description": "Push",
      "iconDescr": "factor.push.description",
      "iconName": "oktaVerifyPush_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
  Object {
    "dir": "ltr",
    "id": "auth_btn_phone_number_undefined",
    "label": "phone_number",
    "noTranslate": true,
    "options": Object {
      "actionParams": Object {
        "authenticator.enrollmentId": undefined,
        "authenticator.id": undefined,
        "authenticator.methodType": undefined,
      },
      "ariaLabel": "oie.select.authenticator.verify.phone.with.phone.label",
      "authenticator": Object {
        "displayName": "",
        "id": "",
        "key": "phone_number",
        "methods": Array [
          Object {
            "type": "",
          },
        ],
        "profile": Object {
          "phoneNumber": "216XXXXX43",
        },
        "type": "",
      },
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "phone_number",
      "description": "216XXXXX43",
      "iconName": "phone_number_1",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "phone_number",
      "logoUri": undefined,
      "nickname": undefined,
      "step": "select-authenticator-authenticate",
      "type": "button",
      "usageDescription": undefined,
    },
    "type": "AuthenticatorButton",
  },
  Object {
    "id": "auth_btn_okta_verify_signed_nonce",
    "label": "oie.okta_verify.label",
    "options": Object {
      "actionParams": Object {
        "authenticator.id": "1234abc",
        "authenticator.methodType": "signed_nonce",
      },
      "ariaLabel": "oie.select.authenticator.okta_verify.signed_nonce.label",
      "ctaLabel": "oie.verify.authenticator.button.text",
      "dataSe": "okta_verify-signed_nonce",
      "description": "Fastpass",
      "iconDescr": "factor.push.description",
      "iconName": "oktaVerifyPush_2",
      "includeData": true,
      "includeImmutableData": false,
      "isAdditionalEnroll": undefined,
      "isEnroll": undefined,
      "key": "okta_verify",
      "step": "select-authenticator-authenticate",
      "type": "button",
    },
    "type": "AuthenticatorButton",
  },
]
`;
